--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,28 @@
   "support": {
     "email": "support@fluxlabs.ch"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "ssh://git@git.fluxlabs.ch:10022/fluxlabs/flux-eco/projection.git"
+    },
+    {
+      "type": "vcs",
+      "url": "ssh://git@git.fluxlabs.ch:10022/fluxlabs/flux-eco/storage.git"
+    },
+    {
+      "type": "vcs",
+      "url": "ssh://git@git.fluxlabs.ch:10022/fluxlabs/flux-eco/value-object.git"
+    },
+    {
+      "type": "vcs",
+      "url": "ssh://git@git.fluxlabs.ch:10022/fluxlabs/flux-eco/json-schema-document.git"
+    }
+  ],
   "require": {
+    "flux-eco/projection": "dev-main",
+    "flux-eco/storage": "dev-main",
+    "flux-eco/json-schema-document": "dev-main",
     "php": ">=8.0",
     "ext-curl": "*",
     "ext-json": "*",
