--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,10 @@
     "email": "support@fluxlabs.ch"
   },
   "require": {
-    "flux-eco/projection": ">=0.0.1",
-    "flux-eco/storage": ">=0.0.1",
-    "flux-eco/json-schema-document": ">=0.0.1",
+    "flux-eco/projection": ">=1.0.0",
+    "flux-eco/storage": ">=1.0.0",
+    "flux-eco/json-schema-document": ">=1.0.0",
+    "flux-eco/value-object": ">=1.0.0",
     "php": ">=8.0",
     "ext-curl": "*",
     "ext-json": "*",
@@ -34,9 +35,17 @@
 
   },
   "autoload": {
+    "files": [
+      "fn/initialize.php",
+      "fn/publishStateChange.php",
+      "fn/republishAllStates.php"
+    ],
     "psr-4": {
       "FluxEco\\GlobalStream\\": [
         "src/"
+      ],
+      "fluxGlobalStream\\": [
+        "fn/"
       ]
     }
   },
